# iima

./: .gitignore  README.md  package.json
scripts/: build-safari-extension.mjs  build.mjs  dev-server.mjs  generate-iso639-catalog.mjs  generate-localizations.mjs  generate-native-text-encoding.mjs  (+50 more)
src/: about.js  (+46 more)
src-tauri/: Cargo.toml  IINA-Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: auxiliary-player-windows.json  default.json
src-tauri/icons/: icon.icns
src-tauri/icons/doc/: doc_3gp.icns  doc_aac.icns  doc_asf.icns  doc_avi.icns  doc_flac.icns  doc_flv.icns  doc_gif.icns  doc_list.icns  doc_m4a.icns  doc_mkv.icns  doc_mp3.icns  doc_mp4.icns  doc_ogg.icns  doc_other_a.icns  doc_other_v.icns  doc_plugin.icns  doc_qt.icns  doc_rm.icns  doc_ts.icns  doc_wav.icns  doc_webm.icns  doc_wmv.icns
src-tauri/src/: about_window.rs  app_logging.rs  auxiliary_player_windows.rs  auxiliary_windows.rs  catalog.rs  commands.rs  history.rs  iina_commands.rs  inspector_window.rs  key_bindings.rs  launch.rs  lib.rs  localization.rs  main.rs  media.rs  menu.rs  mpv.rs  native-menu-locales.json  native_application.m  native_application.rs  native_default_app.m  native_default_app.rs  native_file.m  native_file.rs  native_font_picker.m  native_font_picker.rs  native_inspector.m  native_keychain.m  native_keychain.rs  native_localization.m  native_menu.m  native_menu.rs  native_open_panel.m  native_open_panel.rs  native_pasteboard.m  native_pasteboard.rs  native_prompt.m  native_prompt.rs  native_recent_documents.m  native_recent_documents.rs  (+31 more)
(+73 files in other folders)
