[package]
name = "iima"
version = "0.9.3"
edition = "2021"

[lib]
name = "iima_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]
macos-cli = []

[[bin]]
name = "iina-cli"
path = "src/bin/iina-cli.rs"
required-features = ["macos-cli"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
md-5 = "0.10.6"
sha2 = "0.10.9"
plist = "1.9.0"
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"
